# render-svg-icons

./: .gitignore  README.md  pyproject.toml
render_bitmaps/: __main__.py  dependencies.py  output.py  parse_svg.py  png.py  render.py  render_category.py
render_svg_icons/: __init__.py  dependencies.py  output.py  parse_svg.py  png.py  render.py  render_category.py
