[tool.poetry]
name = "render-svg-icons"
version = "0.1.0"
description = "Python script to render SVG icons to PNG icons in various sizes"
authors = ["GNOME icon developers", "Moka Icon Theme developers", "Yaru Icon Theme developers", "Elsie Hupp <github@elsiehupp.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Elsie Hupp <github@elsiehupp.com>"]
readme = "README.md"
repository = "https://github.com/elsiehupp/render-svg-icons"
keywords = ["Icons", "Inkscape", "Linux", "SVG"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Artistic Software",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Shells",
    "Topic :: Utilities"
]
packages = [
    { include = "render_svg_icons/*"}
]

[tool.poetry.scripts]
render_svg_icons = "render_svg_icons:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
